<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPostLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPostFragment" >

    <EditText
        android:id="@+id/delayET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delay"
        android:inputType="number"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/statusET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status"
        android:inputType="number"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/commentET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:inputType="text"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/postB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post" />
</LinearLayout>