<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".BoardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/terminus1ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:animateLayoutChanges="false"
        android:background="@drawable/line_border">

        <TextView
            android:id="@+id/terminus1DepartureTextBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/departure"
            android:textColor="@color/primary_blue"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/terminus1DepartureBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/primary_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terminus1DepartureTextBoard" />

        <ImageView
            android:id="@+id/revertB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/revert_icon_border"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_swap_horiz_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/terminus1ArrivalTextBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/arrival"
            android:textAlignment="viewStart"
            android:textColor="@color/primary_blue"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/terminus1ArrivalBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/primary_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terminus1ArrivalTextBoard" />

        <Button
            android:id="@+id/detailsB"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_button"
            android:textColor="@color/primary_dark"
            app:cornerRadius="48dp"
            app:layout_constraintStart_toEndOf="@+id/revertB"
            app:layout_constraintTop_toBottomOf="@+id/revertB"
            app:strokeColor="@color/primary_dark"
            android:minWidth="100dp"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/addPostB"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_post_button"
            android:minWidth="100dp"
            android:textColor="@color/primary_dark"
            app:cornerRadius="48dp"
            app:layout_constraintEnd_toStartOf="@+id/revertB"
            app:layout_constraintTop_toBottomOf="@+id/revertB"
            app:strokeColor="@color/primary_dark"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/board_title"
        android:textColor="@color/primary_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terminus1ArrivalTextBoard" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>